--- a/Project.toml
+++ b/Project.toml
@@ -34,11 +34,18 @@ UnsafeAtomics = "013be700-e6cd-48c3-b4a1-df204f14c38f"
 UnsafeAtomicsLLVM = "d80eeb9a-aca5-4d75-85e5-170c8b632249"
 hsa_rocr_jll = "dd59ff1a-a01a-568d-8b29-0669330f116a"
 
+[weakdeps]
+EnzymeCore = "f151be2c-9106-41f4-ab19-57ee4f262869"
+
+[extensions]
+EnzymeCoreExt = "EnzymeCore"
+
 [compat]
 AbstractFFTs = "1.0"
 Adapt = "4"
 Atomix = "0.1"
 CEnum = "0.4, 0.5"
+EnzymeCore = "0.7.3"
 ExprTools = "0.1"
 GPUArrays = "10"
 GPUCompiler = "0.26, 0.27"
